examples/simple/argocd-applications/kfdefs/ingress.yaml
"apiVersion": "networking.k8s.io/v1beta1"
"kind": "Ingress"
"metadata":
  "annotations":
    "alb.ingress.kubernetes.io/auth-idp-cognito": "{\"UserPoolArn\":\"arn:aws:cognito-idp:us-east-2:245582572290:userpool/us-east-2_BKkjH0Uat\",\"UserPoolClientId\":\"18mi4egds4alc2a550q8sci3ri\",\"UserPoolDomain\":\"auth.german.edu.provectus.io\"}"
    "alb.ingress.kubernetes.io/auth-type": "cognito"
    "alb.ingress.kubernetes.io/certificate-arn": "arn:aws:acm:us-east-2:245582572290:certificate/2bf594d9-2d7b-4848-b055-c7743b5b0201"
    "alb.ingress.kubernetes.io/listen-ports": "[{\"HTTPS\":443}]"
    "alb.ingress.kubernetes.io/scheme": "internet-facing"
    "kubernetes.io/ingress.class": "alb"
  "labels":
    "app": "kubeflow"
  "name": "istio-ingress"
  "namespace": "istio-system"
"spec":
  "rules":
  - "host": "kubeflow.german.edu.provectus.io"
    "http":
      "paths":
      - "backend":
          "serviceName": "istio-ingressgateway"
          "servicePort": 80
        "path": "/*"
  "tls":
  - "hosts":
    - "kubeflow.german.edu.provectus.io"
    "secretName": "kubeflow-tls-certs"
